Game String Error Resolved And Overlapping Issue Resolved

--- a/css/game.css
+++ b/css/game.css
@@ -9,6 +9,12 @@
 .quiz-wrapper {
     width: 600px;
 }
+input::placeholder {
+    font-size: 12px;
+    color: gray;
+    font-style: italic;
+  }
+  
 
 h1 {
     text-align: center;
